--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1027,6 +1027,10 @@ class _CUDAGraph:
     def reset(self) -> None: ...
     def pool(self) -> Tuple[_int, _int]: ...
 
+class _CUDAFusedGraph:
+    def reset(self) -> None: ...
+    def build_graph(self, other) -> None: ...
+
 def _cuda_isCurrentStreamCapturing() -> _bool: ...
 
 def _graph_pool_handle() -> Tuple[_int, _int]: ...
