build_graph api fix

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1029,7 +1029,7 @@ class _CUDAGraph:
 
 class _CUDAFusedGraph:
     def reset(self) -> None: ...
-    def build_graph(self, other) -> None: ...
+    def build_graph(self, cuGraph) -> None: ...
 
 def _cuda_isCurrentStreamCapturing() -> _bool: ...
 
