add launch_graph API

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1030,6 +1030,7 @@ class _CUDAGraph:
 class _CUDAFusedGraph:
     def reset(self) -> None: ...
     def build_graph(self, cuGraph) -> None: ...
+    def launch_graph(self, count) -> None: ...
 
 def _cuda_isCurrentStreamCapturing() -> _bool: ...
 
