--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1028,8 +1028,9 @@ class _CUDAGraph:
     def pool(self) -> Tuple[_int, _int]: ...
 
 class _CUDAFusedGraph:
+    def __new__(self, graphs) -> _CUDAFusedGraph: ...
     def reset(self) -> None: ...
-    def build_graph(self, cuGraph) -> None: ...
+    def build_graph(self) -> None: ...
     def launch_graph(self, count) -> None: ...
 
 def _cuda_isCurrentStreamCapturing() -> _bool: ...
