add 2-dim dp_solver

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1028,7 +1028,7 @@ class _CUDAGraph:
     def pool(self) -> Tuple[_int, _int]: ...
 
 class _CUDAFusedGraph:
-    def __new__(self, graphs) -> _CUDAFusedGraph: ...
+    def __new__(self, graphs, groups) -> _CUDAFusedGraph: ...
     def reset(self) -> None: ...
     def build_graph(self, flag) -> None: ...
     def launch_graph(self, count) -> None: ...
